--- a/analysis/PFA_Sampling_Multiple_DEMs.Rmd
+++ b/analysis/PFA_Sampling_Multiple_DEMs.Rmd
@@ -34,6 +34,10 @@ params:
     label: Expansion Factor
     value: 1.1
     input: numeric
+  duration_list:
+    label: List of storm durations
+    value: duration_list.txt
+    input: text
 ---
 
 ```{r setup, include = FALSE}
@@ -56,7 +60,7 @@ Julia has written a function "dem_to_model" that works with multiple DEMs, but I
 
 The names for these raster and point shapefiles are listed in a text file specified in the parameter list for this notebook. The directory containing the raster and vector files must include projection (.prj) files. The input file has a header line "DEM, Initiation_points" followed by one row for each input DEM and its corresponding initiation-point shapefile, separated by a comma. Use full-path names; this allows files from different data directories to be used.
 
-For now, I'll stick with the same set of explanatory variables explored with PFA_landslide_initiation.Rmd: gradient, mean curvature, and partial contributing area for 5-, 10-, 20-, and 40-hour duration storms.
+For now, I'll stick with the same set of explanatory variables explored with PFA_landslide_initiation.Rmd: gradient, mean curvature, and partial contributing area for a range of storm durations. A list of storm durations can be specified using the "duration_list" input parameter; the defaults are 6, 12, 24, and 48 hours.
 
 ```{r set_up_covariates}
 output_dir <- params$output_dir
@@ -98,38 +102,27 @@ for (i in 1:num_files) {
   grad_name = paste0("gradient_", as.character(i))
   mean_name = paste0("meancurv_", as.character(i))
   
-  if (file.exists(paste0(output_dir, grad_name, ".flt")) & file.exists(paste0(output_dir, mean_name, ".flt"))) {
+  if (!(file.exists(paste0(output_dir, grad_name, ".flt")) & file.exists(paste0(output_dir, mean_name, ".flt")))) {
     
-    grad <- terra::rast(paste0(output_dir, grad_name, ".flt"))
-    mean <- terra::rast(paste0(output_dir, mean_name, ".flt"))
-  
-  } else {
-  
     rasters <- c(paste0("GRADIENT,", output_dir, grad_name),
-               paste0("MEAN CURVATURE,", output_dir, mean_name))
+                 paste0("MEAN CURVATURE,", output_dir, mean_name))
 
     elev_deriv(rasters = rasters,
                length_scale = length_scale,
                dem = DEM,
                scratch_dir = output_dir)
-  
-    grad <- terra::rast(paste0(output_dir, grad_name, ".flt"))
-
-    mean <- terra::rast(paste0(output_dir, mean_name, ".flt"))
-
+    
   }
 
-  names(grad) <- "gradient"
-  names(mean) <- "mean_curv"
-  
-  covariates <- c(grad, mean)
+  derivs <- terra::rast(paste0(output_dir, grad_name, ".flt"))
+  names(derivs) <- "gradient"
+  derivs <- c(derivs, terra::rast(paste0(output_dir, mean_name, ".flt")))
+  names(derivs[[2]]) <- "mean_curv"
   
   # Get the gradient and mean curvature values at each initiation site and append them to the ls_pnts dataframe
-  ls_vals_i <- terra::extract(covariates,
+  ls_pnts <- rbind(ls_pnts,  terra::extract(derivs,
                               initiation_points,
-                              method = "bilinear")
-  
-  ls_pnts <- rbind(ls_pnts,  ls_vals_i)
+                              method = "bilinear"))
   
 }
 
@@ -156,7 +149,7 @@ if (!params$expansion_factor == 1) {
 
 ```
 
-We could use create_analysis_region_mask here, but that works with a set of initiation_points associated with a single DEM. Rather, we need to set the analysis region for each DEM independently, but based on the range of gradient and mean curvature values over the entire set of DEMs. We got that range above; here we set the analysis region for each DEM. While iterating through the DEM files, we'll also build the partial-accumulation-area rasters and the the values for the landslide and nonlandslide points from these.
+We could use the create_analysis_region_mask function here, but that works with a set of initiation_points associated with a single DEM. Rather, we need to set the analysis region for each DEM independently, but based on the range of gradient and mean curvature values over the entire set of DEMs. We got that range above; here we set the analysis region for each DEM. While iterating through the DEM files, we'll also build the partial-accumulation-area rasters and the the values for the landslide and nonlandslide points from these.
 
 ``` {r, results = 'hide'}
 range_mx <- matrix(c(grad_min, mean_min, grad_max, mean_max), ncol = 2, nrow = 2)
@@ -166,71 +159,45 @@ rownames(range_mx) <- c("gradient", "mean_curv")
 nonls_pnts <- data.frame()
 ls_pnts <- data.frame()
 
-for (i in 1:nrow(data_files)) {
+duration_list <- params$duration_list
+if (file.exists(params$duration_list)) {
+  durations <- read.csv(duration_list, header = FALSE)
+} else {
+  durations <- c(6, 12, 24, 48)
+}
+
+for (i in 1:num_files) {
   DEM <- data_files$DEM[[i]]
   initiation_points <- terra::vect(paste0(str_squish(data_files$Initiation_points[[i]]), ".shp"))
   
   grad_name = paste0("gradient_", as.character(i))
   mean_name = paste0("meancurv_", as.character(i))
-  grad <- terra::rast(paste0(output_dir, grad_name, ".flt"))
-  names(grad) <- "gradient"
-  mean <- terra::rast(paste0(output_dir, mean_name, ".flt"))
-  names(mean) <- "mean_curv"
+  covariates <- terra::rast(paste0(output_dir, grad_name, ".flt"))
+  names(covariates) <- "gradient"
+  covariates <- c(covariates, terra::rast(paste0(output_dir, mean_name, ".flt")))
+  names(covariates[[2]]) <- "mean_curv"
   
   # Get the partial contributing areas here; we don't need to save the rasters.
   # This does take awhile.
   
   k = 1.0 # saturated hydraulic conductivity in meters per hour
-  d = 5.0 # storm duration in hours
 
-  # Get contributing area for a 5-hour-duration storm.
-  contributing_area(raster = paste0(output_dir, "pca_k1_d5.flt"),  
-                    dem = DEM,
-                    length_scale = length_scale, 
-                    k = k, 
-                    d = d, 
-                    scratch_dir = output_dir)
-  pca5 <- rast(paste0(output_dir, "pca_k1_d5.flt"))
-  names(pca5) <- "pca5"
-
-  d = 10.0 # for a 10-hour-duration storm.
-  contributing_area(raster = paste0(output_dir, "pca_k1_d10.flt"),
-                    dem = DEM, 
-                    length_scale = length_scale, 
-                    k = 1, 
-                    d = d, 
-                    scratch_dir = output_dir)
-  pca10 <- rast(paste0(output_dir, "pca_k1_d10.flt"))
-  names(pca10) <- "pca10"
-
-  d = 20.0 # for a 20-hour-duration storm.
-  contributing_area(raster = paste0(output_dir, "pca_k1_d20.flt"),
-                    dem = DEM, 
-                    length_scale = length_scale, 
-                    k = k, 
-                    d = d, 
-                    scratch_dir = output_dir)
-  pca20 <- rast(paste0(output_dir, "pca_k1_d20.flt"))
-  names(pca20) <- "pca20"
-
-  d = 40.0 # for a 20-hour-duration storm.
-  contributing_area(raster = paste0(output_dir, "pca_k1_d40.flt"),
-                    dem = DEM, 
-                    length_scale = length_scale, 
-                    k = k, 
-                    d = d, 
-                    scratch_dir = output_dir)
-  pca40 <- rast(paste0(output_dir, "pca_k1_d40.flt"))
-  names(pca40) <- "pca40"
-
-  covariates <- c(grad, mean, pca5, pca10, pca20, pca40)
+  for (j in 1:ncol(durations)) {
+    d <- durations[[j]]
+    raster_name <- paste0("pca_k1_", as.character(d))
+    covariates <- c(covariates, contributing_area(raster = paste0(output_dir, raster_name),
+                                                    dem = DEM, 
+                                                    length_scale = length_scale, 
+                                                    k = k, 
+                                                    d = d, 
+                                                    scratch_dir = output_dir))
+    names(covariates[[2+j]]) <- raster_name
+    
+  }
   
-# Get all the covariate values at the landslide initiation points
-  ls_vals_i <- terra::extract(covariates,
-                              initiation_points,
-                              method = "bilinear")
-  
-  ls_pnts <- rbind(ls_pnts,  ls_vals_i)
+  ls_pnts <- rbind(ls_pnts, terra::extract(covariates,
+                                           initiation_points,
+                                           method = "bilinear"))
   
 # Now sample the nonlandslide analysis zone
   neg_region <- make_neg_region(positive_points = initiation_points, 
@@ -240,21 +207,10 @@ for (i in 1:nrow(data_files)) {
                   return_raster = TRUE)
 
 # Set values within the inner buffer and beyond the outer buffer to nodata
-  grad <- grad * neg_region
-  mean <- mean * neg_region
-  
-  limiting_vars <- c(grad, mean)
-  analysis_mask <- mask_by_range(limiting_vars, range_mx)
-  
-  grad <- grad * analysis_mask
-  mean <- mean * analysis_mask
+  analysis_mask <- mask_by_range(covariates[[1:2]], range_mx)
   analysis_mask <- analysis_mask * neg_region
-  pca5 <- pca5 * analysis_mask
-  pca10 <- pca10 * analysis_mask
-  pca20 <- pca20 * analysis_mask
-  pca40 <- pca40 * analysis_mask
-    
-  covariates <- c(grad, mean, pca5, pca10, pca20, pca40)
+  
+  covariates <- covariates * analysis_mask
   
   num_points <- ceiling(length(initiation_points))
 
@@ -263,14 +219,17 @@ for (i in 1:nrow(data_files)) {
                               buffer = FALSE,
                               rseed = 12)
   
-  nonls_vals_i <- terra::extract(covariates,
-                              neg_points,
-                              method = "bilinear")
-  
-  # append these to the nonls_pnts data frame
-  nonls_pnts <- rbind(nonls_pnts,  nonls_vals_i)
+  nonls_pnts <- rbind(nonls_pnts,  terra::extract(covariates,
+                                                  neg_points,
+                                                  method = "bilinear"))
   
 }
+
+# save the sample points
+ls_pnts$class <- "pos"
+nonls_pnts$class <- "neg"
+sample_pnts <- rbind(ls_pnts, nonls_pnts)
+save(sample_pnts, file = paste0(output_dir, "sample.Rdata"))
 
 ```
 
