--- a/analysis/pca_training_data.Rmd
+++ b/analysis/pca_training_data.Rmd
@@ -39,15 +39,38 @@ pc <- prcomp(sample_pnts[,2:7],
              center = TRUE,
              scale. = TRUE)
 
-plot(pc$x[sample_pnts$class == "neg",], pch = 19)
+p <- plot(pc$x[sample_pnts$class == "neg",], pch = 19, 
+          main = "Principal Components Analysis", font.main = 4)
 points(pc$x[sample_pnts$class == "pos",], col = "red", pch = 19)
 
 legend("topright", 
-       legend = c("Negative points", "Initiation points"), 
+       legend = c("Negative points", "Landslide initiation points"), 
        pch = 19, 
        col = c("black", "red"),
        bty= "n")
 
+l.x <- cbind(pc$rotation[,1]) * 2
+l.y <- cbind(pc$rotation[,2]) * 2
+arrows(x0=0, x1=l.x, y0=0, y1=l.y, col="darkgreen", length=0.15, lwd=3)
+text(l.x, l.y, labels=rownames(l.x) , col="darkgreen", pos=c(3, 1, 3, 1), offset=1, cex=1.2)
+
+
 
 ```
 
+The first two principal components are the ones that explain the most amount of variability in the data. This should be the axis across which we see the data as separated as it gets. We hope to see some separation of the different categories we are interested (in this case, landslide initiation points and negative points), indicating that the covariates we are looking at can explain the differences between these classes. 
+
+For the example Umpqua dataset, there is a slight trend toward landslide initiation points being on the left side of the plot, but lots of overlap/noise in the plots still. 
+
+```{r}
+preset <- par(mfrow = c(1, 2))
+
+barplot(pc$rotation[,1], main="PC 1 Loadings Plot", las=2,
+        ylim = c(-1, 1))
+barplot(pc$rotation[,2], main="PC 2 Loadings Plot", las=2,
+        ylim = c(-1, 1))
+
+par(preset)
+
+```
+Looking at the loadings of each covariate on the principal components, we can try to grasp what each of the dimensions is trying to capture. For example, the first principal component is mostly from the partial contributing area calculations, while the second component is by far most affected by gradient. 
